# puk

./: .gitignore  .gitmodules  Copilot-SDK-Tutorial.md  README.md  backlog-puk.md  example.puk.toml  log.txt  pyproject.toml
.github/skills/copilot-sdk/: SKILL.md
.github/skills/copilot-sdk/references/: 00-setup.md
docs/: 00_index.md  10_overview.md  15_functional_sources.md  20_architecture.md  30_backend_api.md  40_data_model.md  50_frontend_ui.md  60_user_flows.md  70_ops_and_runtime.md  80_open_questions.md  90_appendix_inventory.md  README.md
images/: puk-small.xcf
playbooks/: reverse-engineer-docs.md
specs/: SPEC-001-Basic-Implementation.md  SPEC-002-Implement-BYO.md  SPEC-003-Run-as-unit-of-execution.,md  SPEC-003-Run-as-unit-of-execution.md  SPEC-004-Playbooks.md  SPEC-005-implement-workspace-config.md
specs/DO-NOT-USE/: DEPRECATED-SPEC-001-Basic-Implementation.md
src/puk/: __init__.py  __main__.py  agent.py  app.py  config.py  errors.py  playbook_runner.py  playbooks.py  repl.py  reports.py  run.py  runs.py  staging.py  ui.py  workspace.py
src/puk/tools/: __init__.py  filesystem.py  python_exec.py  report_intent.py  terminal.py  user_io.py
tests/: conftest.py  test_cli.py  test_config.py  test_errors.py  test_llm_config.py  test_playbook_runner.py  test_playbooks.py  test_puk_app.py  test_reports.py  test_run_recorder.py  test_runs_inspect.py  test_staging.py  test_ui.py  test_workspace.py  test_workspace_config.py
