[project]
name = "puk"
version = "0.1.0"
description = "Puk, who can’t resist poking around and making things better"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "pydantic>=2.0",
    "prompt_toolkit",
    "github-copilot-sdk",
    "pyyaml",
]

[project.scripts]
puk = "puk.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
